# cmake-static_library-cxx

./: CMakeLists.txt  LICENSE.md  README.md
cmake/: note.txt
include/: foo.hpp
src/: CMakeLists.txt  foo.cpp
test/: CMakeLists.txt  unit_test.c
