##########################################################################################
# ┌──────────────────────────────────────────────────────────────────────────────────────┐
# │                                                                                      │
# │      CMake build script                                                              │
# │  * * * * * * * * * * * * *                                                           │
# │                                                                                      │
# └──────────────────────────────────────────────────────────────────────────────────────┘
##########################################################################################
##########################################################################################
cmake_minimum_required(VERSION 3.13.2 FATAL_ERROR)


##########################################################################################
# ┌──────────────────────────────────────────────────────────────────────────────────────┐
# │  CTest include module                                                                │
# └──────────────────────────────────────────────────────────────────────────────────────┘
##########################################################################################
enable_testing()
include(CTest)


##########################################################################################
# ┌──────────────────────────────────────────────────────────────────────────────────────┐
# │  CTest create tester executable                                                      │
# └──────────────────────────────────────────────────────────────────────────────────────┘
##########################################################################################
add_executable("${PROJECT_NAME}_test" "unit_test.c")

target_include_directories("${PROJECT_NAME}_test" 
    PUBLIC 
        "../source"
)

target_link_libraries("${PROJECT_NAME}_test" 
    PUBLIC 
        "cexception" 
        "unity" 
        "cmock"
)



##########################################################################################
# ┌──────────────────────────────────────────────────────────────────────────────────────┐
# │  CTest give tester an alias                                                          │
# └──────────────────────────────────────────────────────────────────────────────────────┘
##########################################################################################
add_executable("${PROJECT_NAME}_test::tester" ALIAS "${PROJECT_NAME}_test")



##########################################################################################
# ┌──────────────────────────────────────────────────────────────────────────────────────┐
# │  CTest include module                                                                │
# │                                                                                      │
# │  Use this long name since executables and tests are registered globally              │
# │  Also running ctest -R 'Myproj.test' will limit to this file                         │
# │                                                                                      │                                                           
# └──────────────────────────────────────────────────────────────────────────────────────┘
##########################################################################################
add_test("${PROJECT_NAME}_test" "${PROJECT_NAME}_test")




